// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker renders agent marker correctly 1`] = `
<div>
  <div
    class="css-1oyht0a-MarkerContainer ezco79t0"
    style="left: 4.5px;"
  >
    <span
      class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      id="agent-wrapper"
    >
      <div
        class="css-1ejn3a9-Container e7ziuc10"
      >
        <span
          class="css-xbgcmn-Indicator e7ziuc11"
          color="#8E9FBC"
          shape="circle"
        />
      </div>
    </span>
  </div>
</div>
`;

exports[`Marker renders error marker correctly 1`] = `
<div>
  <div
    class="css-1oyht0a-MarkerContainer ezco79t0"
    style="left: 4.5px;"
  >
    <div
      class="euiPopover emotion-euiPopover-inline-block"
      id="popover"
    >
      <div
        class="e9aspak2 css-lzkl4t-Container-Button e7ziuc10"
        data-test-subj="popover"
      >
        <span
          class="css-1p2bud6-Indicator e7ziuc11"
          color="#C61E25"
          shape="square"
        />
      </div>
    </div>
  </div>
</div>
`;
